removed debugger from create model in popup controller

--- a/app/views/probefahrt/index.html.erb
+++ b/app/views/probefahrt/index.html.erb
@@ -429,7 +429,7 @@
         var value=$(this).find('td:first').html();
         selected_val["car_id"] = value;
         link_url = link_url + "?car_id=" + value;
-        console.log(link_url);
+        // console.log(link_url);
     });
 
     $("#cust_table tr").click(function(){
@@ -439,7 +439,7 @@
         link_url = link_url + "&cust_id=" + value;
         $('#probefahrt_pdf_dwnld').attr('href', link_url);
         $('#probefahrt_pdf_display').attr('src', link_url);
-        console.log(link_url);
+        // console.log(link_url);
     });
 
     // $('.to_redirect').on('click', function(e){
