Add real data to makes drop down

--- a/app/views/popup/_carmodelpopup_two.html.erb
+++ b/app/views/popup/_carmodelpopup_two.html.erb
@@ -53,7 +53,309 @@
               <label class="d-block">
                 Marke *
               </label>
-              <%= form.select :marke, ["Marke auswählen", "Abarth", "AC", "Acura", "Aixam", "Alfa Romeo", "ALPINA", "Artega", "Asia Motors", "Aston Martin", "Audi", "Austin", "Austin Healey", "BAIC", "Bentley", "BMW", "Borgward", "Brilliance", "Bugatti", "Buick", "Cadillac", "Casalini", "Caterham", "Chatenet", "Chevrolet", "Chrysler", "Citroën", "Cobra", "Corvette", "Cupra", "Dacia", "Daewoo", "Daihatsu", "DeTomaso", "DFSK", "Dodge", "Donkervoort", "DS Automobiles", "Ferrari", "Fiat", "Fisker", "Ford", "GAC Gonow", "Gemballa", "GMC", "Grecav", "Hamann", "Holden", "Honda", "Hummer", "Hyundai", "Infiniti", "Isuzu", "Iveco", "Jaguar", "Jeep", "Kia", "Koenigsegg", "KTM", "Lada", "Lamborghini", "Lancia", "Land Rover", "Landwind", "Lexus", "Ligier", "Lincoln", "Lotus", "Mahindra", "Maserati", "Maybach", "Mazda", "McLaren", "Mercedes-Benz", "MG", "Microcar", "MINI", "Mitsubishi", "Morgan", "Nissan", "NSU", "Oldsmobile", "Opel", "Pagani", "Peugeot", "Piaggio", "Plymouth", "Polestar", "Pontiac", "Porsche", "Proton", "Renault", "Rolls-Royce", "Rover", "Ruf", "Saab", "Santana", "Seat", "Skoda", "Smart", "speedART", "Spyker", "Ssangyong", "Subaru", "Suzuki", "Talbot", "Tata", "TECHART", "Tesla", "Toyota", "Trabant", "Triumph", "TVR", "Volkswagen", "Volvo", "Wartburg", "Westfield", "Wiesmann", "Andere"],
+              <%
+              all_makes = [
+                [ 'AC', '1' ],
+                [ 'Acura', '2' ],
+                [ 'Alfa Romeo', '3' ],
+                [ 'Alpine', '4' ],
+                [ 'AM General', '5' ],
+                [ 'Ariel', '6' ],
+                [ 'Aro', '7' ],
+                [ 'Asia', '8' ],
+                [ 'Aston Martin', '9' ],
+                [ 'Audi', '10' ],
+                [ 'Austin', '11' ],
+                [ 'Autobianchi', '12' ],
+                [ 'Baltijas Dzips', '13' ],
+                [ 'Beijing', '14' ],
+                [ 'Bentley', '15' ],
+                [ 'Bertone', '16' ],
+                [ 'Bitter', '17' ],
+                [ 'BMW', '18' ],
+                [ 'Brabus', '20' ],
+                [ 'Brilliance', '21' ],
+                [ 'Bristol', '22' ],
+                [ 'Bufori', '23' ],
+                [ 'Bugatti', '24' ],
+                [ 'Buick', '25' ],
+                [ 'BYD', '26' ],
+                [ 'Byvin', '27' ],
+                [ 'Cadillac', '28' ],
+                [ 'Callaway', '29' ],
+                [ 'Carbodies', '30' ],
+                [ 'Caterham', '31' ],
+                [ 'Changan', '32' ],
+                [ 'ChangFeng', '33' ],
+                [ 'Chery', '34' ],
+                [ 'Chevrolet', '35' ],
+                [ 'Chrysler', '36' ],
+                [ 'Citroen', '37' ],
+                [ 'Cizeta', '38' ],
+                [ 'Coggiola', '39' ],
+                [ 'Dacia', '40' ],
+                [ 'Dadi', '41' ],
+                [ 'Daewoo', '42' ],
+                [ 'Daihatsu', '44' ],
+                [ 'Daimler', '45' ],
+                [ 'Dallas', '46' ],
+                [ 'Datsun', '47' ],
+                [ 'De Tomaso', '48' ],
+                [ 'DeLorean', '49' ],
+                [ 'Derways', '50' ],
+                [ 'Dodge', '51' ],
+                [ 'DongFeng', '52' ],
+                [ 'Doninvest', '53' ],
+                [ 'Donkervoort', '54' ],
+                [ 'E-Car', '55' ],
+                [ 'Eagle', '56' ],
+                [ 'Eagle Cars', '57' ],
+                [ 'FAW', '59' ],
+                [ 'Ferrari', '60' ],
+                [ 'Fiat', '61' ],
+                [ 'Fisker', '62' ],
+                [ 'Ford', '63' ],
+                [ 'Foton', '64' ],
+                [ 'FSO', '65' ],
+                [ 'Fuqi', '66' ],
+                [ 'Geely', '67' ],
+                [ 'Geo', '68' ],
+                [ 'GMC', '69' ],
+                [ 'Gonow', '70' ],
+                [ 'Great Wall', '71' ],
+                [ 'Hafei', '72' ],
+                [ 'Haima', '73' ],
+                [ 'Hindustan', '74' ],
+                [ 'Holden', '75' ],
+                [ 'Honda', '76' ],
+                [ 'HuangHai', '77' ],
+                [ 'Hummer', '78' ],
+                [ 'Hyundai', '79' ],
+                [ 'Infiniti', '80' ],
+                [ 'Innocenti', '81' ],
+                [ 'Invicta', '82' ],
+                [ 'Iran Khodro', '83' ],
+                [ 'Isdera', '84' ],
+                [ 'Isuzu', '85' ],
+                [ 'IVECO', '86' ],
+                [ 'JAC', '87' ],
+                [ 'Jaguar', '88' ],
+                [ 'Jeep', '89' ],
+                [ 'Jensen', '90' ],
+                [ 'JMC', '91' ],
+                [ 'Kia', '92' ],
+                [ 'Koenigsegg', '93' ],
+                [ 'Lamborghini', '95' ],
+                [ 'Lancia', '96' ],
+                [ 'Land Rover', '97' ],
+                [ 'Landwind', '98' ],
+                [ 'Lexus', '99' ],
+                [ 'Liebao Motor', '100' ],
+                [ 'Lifan', '101' ],
+                [ 'Lincoln', '102' ],
+                [ 'Lotus', '103' ],
+                [ 'LTI', '104' ],
+                [ 'Luxgen', '105' ],
+                [ 'Mahindra', '106' ],
+                [ 'Marcos', '107' ],
+                [ 'Marlin', '108' ],
+                [ 'Marussia', '109' ],
+                [ 'Maruti', '110' ],
+                [ 'Maserati', '111' ],
+                [ 'Maybach', '112' ],
+                [ 'Mazda', '113' ],
+                [ 'McLaren', '114' ],
+                [ 'Mega', '115' ],
+                [ 'Mercedes-Benz', '116' ],
+                [ 'Mercury', '117' ],
+                [ 'Metrocab', '118' ],
+                [ 'MG', '119' ],
+                [ 'Microcar', '120' ],
+                [ 'Minelli', '121' ],
+                [ 'Mini', '122' ],
+                [ 'Mitsubishi', '123' ],
+                [ 'Mitsuoka', '124' ],
+                [ 'Morgan', '125' ],
+                [ 'Morris', '126' ],
+                [ 'Nissan', '127' ],
+                [ 'Noble', '128' ],
+                [ 'Oldsmobile', '129' ],
+                [ 'Opel', '130' ],
+                [ 'Osca', '131' ],
+                [ 'Pagani', '132' ],
+                [ 'Panoz', '133' ],
+                [ 'Perodua', '134' ],
+                [ 'Peugeot', '135' ],
+                [ 'Piaggio', '136' ],
+                [ 'Plymouth', '137' ],
+                [ 'Pontiac', '138' ],
+                [ 'Porsche', '139' ],
+                [ 'Premier', '140' ],
+                [ 'Proton', '141' ],
+                [ 'PUCH', '142' ],
+                [ 'Puma', '143' ],
+                [ 'Qoros', '144' ],
+                [ 'Qvale', '145' ],
+                [ 'Reliant', '146' ],
+                [ 'Renault', '147' ],
+                [ 'Samsung', '148' ],
+                [ 'Rolls-Royce', '149' ],
+                [ 'Ronart', '150' ],
+                [ 'Rover', '151' ],
+                [ 'Saab', '152' ],
+                [ 'Saleen', '153' ],
+                [ 'Santana', '154' ],
+                [ 'Saturn', '155' ],
+                [ 'Scion', '156' ],
+                [ 'SEAT', '157' ],
+                [ 'ShuangHuan', '158' ],
+                [ 'Skoda', '159' ],
+                [ 'Smart', '160' ],
+                [ 'Soueast', '161' ],
+                [ 'Spectre', '162' ],
+                [ 'Spyker', '163' ],
+                [ 'SsangYong', '165' ],
+                [ 'Subaru', '166' ],
+                [ 'Suzuki', '167' ],
+                [ 'Talbot', '168' ],
+                [ 'Tata', '169' ],
+                [ 'Tatra', '170' ],
+                [ 'Tazzari', '171' ],
+                [ 'Tesla', '172' ],
+                [ 'Tianma', '173' ],
+                [ 'Tianye', '174' ],
+                [ 'Tofas', '175' ],
+                [ 'Toyota', '176' ],
+                [ 'Trabant', '177' ],
+                [ 'Tramontana', '178' ],
+                [ 'Triumph', '179' ],
+                [ 'TVR', '180' ],
+                [ 'Vauxhall', '181' ],
+                [ 'Vector', '182' ],
+                [ 'Venturi', '183' ],
+                [ 'Volkswagen', '184' ],
+                [ 'Volvo', '185' ],
+                [ 'Vortex', '186' ],
+                [ 'Wartburg', '187' ],
+                [ 'Westfield', '188' ],
+                [ 'Wiesmann', '189' ],
+                [ 'Xin Kai', '190' ],
+                [ 'Zastava', '191' ],
+                [ 'Zotye', '192' ],
+                [ 'ZX', '193' ],
+                [ 'E-Mobil', '211' ],
+                [ 'Autocam', '212' ],
+                [ 'VAZ (Lada)', '215' ],
+                [ 'GAZ', '216' ],
+                [ 'ZAZ', '217' ],
+                [ 'ZIL', '218' ],
+                [ 'IZH', '219' ],
+                [ 'Kanonier', '221' ],
+                [ 'LuAZ', '222' ],
+                [ 'Moskwitsch', '223' ],
+                [ 'SZM', '224' ],
+                [ 'TagAZ', '226' ],
+                [ 'UAZ', '227' ],
+                [ 'Ultima', '280' ],
+                [ 'Hawtai', '282' ],
+                [ 'Renaissance Cars', '284' ],
+                [ 'Paykan', '286' ],
+                [ 'Gordon', '289' ],
+                [ 'Haval', '290' ],
+                [ 'Alpina', '291' ],
+                [ 'DS', '3589' ],
+                [ 'PGO', '3590' ],
+                [ 'Zenvo', '3591' ],
+                [ 'Rezvani', '3619' ],
+                [ 'Rimac', '3620' ],
+                [ 'Adler', '3664' ],
+                [ 'DeSoto', '3665' ],
+                [ 'Packard', '3666' ],
+                [ 'Willys', '3667' ],
+                [ 'Kombat', '3668' ],
+                [ 'Borgward', '3676' ],
+                [ 'Ravon', '3689' ],
+                [ 'ZiS', '3690' ],
+                [ 'AMC', '3705' ],
+                [ 'Zenos', '3706' ],
+                [ 'W Motors', '3728' ],
+                [ 'Hudson', '3739' ],
+                [ 'Austin Healey', '3749' ],
+                [ 'Chana', '3752' ],
+                [ 'Changhe', '3753' ],
+                [ 'DFSK', '3754' ],
+                [ 'Efini', '3755' ],
+                [ 'Excalibur', '3756' ],
+                [ 'Groz', '3757' ],
+                [ 'Hurtan', '3760' ],
+                [ 'Jiangnan', '3761' ],
+                [ 'Jinbei', '3762' ],
+                [ 'Monte Carlo', '3765' ],
+                [ 'Nysa', '3767' ],
+                [ 'Shifeng', '3771' ],
+                [ 'SMA', '3772' ],
+                [ 'Wuling', '3774' ],
+                [ 'Genesis', '3815' ],
+                [ 'International', '3816' ],
+                [ 'Zibar', '3821' ],
+                [ 'Andere Auto', '3822' ],
+                [ 'RAM', '4142' ],
+                [ 'Aurus', '4144' ],
+                [ 'Trumpchi', '4145' ],
+                [ 'Abarth', '4146' ],
+                [ 'Baic', '4147' ],
+                [ 'DFM', '4148' ],
+                [ 'Saipa', '4149' ],
+                [ 'Apal', '4154' ],
+                [ 'Bajaj', '4155' ],
+                [ 'Batmobile', '4156' ],
+                [ 'Bilenkin', '4157' ],
+                [ 'Cord', '4158' ],
+                [ 'Delage', '4159' ],
+                [ 'DKW', '4160' ],
+                [ 'DW Hower', '4162' ],
+                [ 'Flanker', '4163' ],
+                [ 'GAC', '4164' ],
+                [ 'GP', '4165' ],
+                [ 'Hanomag', '4166' ],
+                [ 'Hispano-Suiza', '4167' ],
+                [ 'Horch', '4168' ],
+                [ 'KTM AG', '4169' ],
+                [ 'Ligier', '4170' ],
+                [ 'Lucid', '4171' ],
+                [ 'Nash', '4172' ],
+                [ 'Rambler', '4173' ],
+                [ 'Renaissance', '4174' ],
+                [ 'Renault Samsung', '4175' ],
+                [ 'Rinspeed', '4176' ],
+                [ 'Shanghai Maple', '4177' ],
+                [ 'Simca', '4178' ],
+                [ 'Steyr', '4179' ],
+                [ 'Studebaker', '4180' ],
+                [ 'Think', '4181' ],
+                [ 'Wanderer', '4182' ],
+                [ 'Rennwagen', '4183' ],
+                [ 'Logem', '4184' ],
+                [ 'Dallara', '4186' ],
+                [ 'Heinkel', '4187' ],
+                [ 'Yulon', '4188' ],
+                [ 'Bio auto', '4189' ],
+                [ 'Deco Rides', '4190' ],
+                [ 'Sears', '4191' ],
+                [ 'Xpeng', '4192' ],
+                [ 'Roewe', '4195' ],
+                [ 'CheryExeed', '4196' ],
+                [ 'LiXiang', '4197' ],
+                [ 'Nio', '4198' ],
+                [ 'Hennessey', '4199' ],
+                [ 'Polestar', '4200' ],
+                [ 'Auburn', '4201' ],
+                [ 'Weltmeister', '4202' ],
+                [ 'Cupra', '4203' ]
+              ]
+
+              %>
+              <%= form.select :marke, all_makes,
                               {}, { id:"marke-select", class: "form-select bg-light", aria: {label: "Default select example"}}%>
             </div>
             <div class="mt-3">
@@ -227,43 +529,22 @@
   <% end %>
 
 <script type="text/javascript">
-    $("#model-select").change(function() {
-        console.log("Yes");
-        $('.car-1').show();
+  $(document).ready(function() {
+    $("#marke-select").on('change', function(){
+      $.ajax({
+        url: "https://api.car2db.com/api/auto/v1/make.getAll.csv.de?id_type=1&api_key=Patrick.Bartels@gmail.com07826d8551ba1146a91ef240875fdd02",
+        type: "GET",
+        data: {state: $(this).val()},
+        success: function(data) {
+          $("#model-select").children().remove();
+          // Create options and append to the list
+          var listitems = [];
+          $.each(data,function(key, value) {
+              listitems += '<option value="' + key+ '">' + value + '</option>';    });
+          $("#model-select").append(listitems);
+          console.log(listitems);
+        }
+      })
     });
-
-    $( "#model-select" )
-        .change(function () {
-            var str = "";
-            $( "#model-select option:selected" ).each(function() {
-                str += $( this ).text() + " ";
-            });
-            alert( str );
-        });
-
-    $("#car_models tr").click(function(){
-        $(this).addClass('tr-active').siblings().removeClass('tr-active');
-        var value=$(this).find('td:first').html();
-        document.getElementById('car_model_value').value = value;
-    });
-
-    // $(document).ready(function() {
-        //     $("#marke-select").on('change', function(){
-        //         $.ajax({
-        //             url: "/fetch_models",
-        //             type: "GET",
-        //             data: {state: $(this).val()},
-        //             success: function(data) {
-        //                 $("#model-select").children().remove();
-        //                 // Create options and append to the list
-        //                 var listitems = [];
-        //                 $.each(data,function(key, value) {
-        //                     listitems += '<option value="' + key+ '">' + value + '</option>';    });
-        //                 $("#model-select").append(listitems);
-        //                 console.log(listitems);
-        //             }
-        //         })
-        //     });
-        // });
+  });
 </script>
-
