--- a/app/views/login/index.html.erb
+++ b/app/views/login/index.html.erb
@@ -31,7 +31,7 @@
           <form class="">
             <input type="text" placeholder="username" />
             <input type="password" placeholder="password" />
-            <a id="loginButton" class= "orange-btn w-100 p-3 text-decoration-none" href="/angebot">login</a>
+            <a id="loginButton" class= "orange-btn w-100 p-3 text-decoration-none" href="/anmeldung">login</a>
             <p class="message">Not registered? <a href="#">Create an account</a></p>
           </form>
         </div>
@@ -44,7 +44,7 @@
 </html>
 <script>
     $('#loginButton').click(function() {
-        window.location.href = '/angebot';
+        window.location.href = '/anmeldung';
         return false;
     });
 </script>
