Fix car model popup for anmeldung#index

--- a/app/views/anmeldung/index.html.erb
+++ b/app/views/anmeldung/index.html.erb
@@ -86,8 +86,8 @@
 <a href="#top" id="scrollUp" class="orange-color">
   <i class="fa fa-angle-up"></i>
 </a>
-<div id="carmodelpopup" class="modal hide fade" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true"></div>
-<!--<div id="carmodelpopup"></div>-->
+<!-- <div id="carmodelpopup" class="modal hide fade" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true"></div> -->
+<div id="carmodelpopup"></div>
 <div id="carmodelpopup_two"></div>
 
 <%= javascript_include_tag "https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js",
