Fix car model popup js error

--- a/app/views/popup/_carmodelpopup.html.erb
+++ b/app/views/popup/_carmodelpopup.html.erb
@@ -5,86 +5,86 @@
     <div class="modal-content">
       <div class="modal-header">
         <h6 class="modal-title" id="staticBackdropLabel">FAHRZEUG HINZUFUGEN</h6>
-        <i class="fa fa-times btn-close" data-bs-dismiss="modal" aria-label="Close" aria-hidden="true"></i>
+        <i class="fa fa-times btn-close" data-bs-dismiss="#staticBackdrop" aria-label="Close" aria-hidden="true"></i>
       </div>
       <div class="modal-body">
         <div class="row grids-cards uberblick-grids-cards">
 
 
-            <div class="card-col" data-bs-dismiss="modal" data-bs-toggle="modal">
+            <div class="card-col" data-bs-dismiss="#staticBackdrop" data-bs-toggle="#staticBackdrop">
               <%=link_to image_tag("cars-icon/Car_normal.png", alt: "", class: "shadow-sm"), carmodel_popup_two_path,  {:remote => true} %>
               <p class="fw-bold text-uppercase">pkw</p>
             </div>
 
-          <div class="card-col" data-bs-dismiss="modal" data-bs-toggle="modal">
+          <div class="card-col" data-bs-dismiss="#staticBackdrop" data-bs-toggle="#staticBackdrop">
             <%=link_to image_tag("cars-icon/Motorbike.png", alt: "", class: "shadow-sm"), carmodel_popup_two_path,  {:remote => true} %>
             <p class=" fw-bold text-uppercase">krad</p>
           </div>
 
 
-          <div class="card-col" data-bs-dismiss="modal" data-bs-toggle="modal">
+          <div class="card-col" data-bs-dismiss="#staticBackdrop" data-bs-toggle="#staticBackdrop">
             <%=link_to image_tag("cars-icon/Motorhome.png", alt: "", class: "shadow-sm"), carmodel_popup_two_path,  {:remote => true} %>
             <p class="fw-bold text-uppercase">womo</p>
           </div>
 
 
-          <div class="card-col" data-bs-dismiss="modal" data-bs-toggle="modal">
+          <div class="card-col" data-bs-dismiss="#staticBackdrop" data-bs-toggle="#staticBackdrop">
             <%=link_to image_tag("cars-icon/VanUpTo7500.png", alt: "", class: "shadow-sm"), carmodel_popup_two_path,  {:remote => true} %>
             <p class="fw-bold text-uppercase">Lkkw bis 7,5t</p>
           </div>
 
 
-          <div class="card-col" data-bs-dismiss="modal" data-bs-toggle="modal">
+          <div class="card-col" data-bs-dismiss="#staticBackdrop" data-bs-toggle="#staticBackdrop">
             <%=link_to image_tag("cars-icon/TruckOver7500.png", alt: "", class: "shadow-sm"), carmodel_popup_two_path,  {:remote => true} %>
             <p class="fw-bold text-uppercase">lkw uber 7,5t
             </p>
           </div>
 
 
-          <div class="card-col" data-bs-dismiss="modal" data-bs-toggle="modal">
+          <div class="card-col" data-bs-dismiss="#staticBackdrop" data-bs-toggle="#staticBackdrop">
             <%=link_to image_tag("cars-icon/SemiTrailerTruck.png", alt: "", class: "shadow-sm"), carmodel_popup_two_path,  {:remote => true} %>
             <p class="fw-bold text-uppercase">szm</p>
           </div>
 
 
-          <div class="card-col" data-bs-dismiss="modal" data-bs-toggle="modal">
+          <div class="card-col" data-bs-dismiss="#staticBackdrop" data-bs-toggle="#staticBackdrop">
             <%=link_to image_tag("cars-icon/SemiTrailer.png", alt: "", class: "shadow-sm"), carmodel_popup_two_path,  {:remote => true} %>
             <p class="fw-bold text-uppercase">Auflieger</p>
           </div>
 
 
-          <div class="card-col" data-bs-dismiss="modal" data-bs-toggle="modal">
+          <div class="card-col" data-bs-dismiss="#staticBackdrop" data-bs-toggle="#staticBackdrop">
             <%=link_to image_tag("cars-icon/Trailer_normal.png", alt: "", class: "shadow-sm"), carmodel_popup_two_path,  {:remote => true} %>
             <p class="fw-bold text-uppercase">anhanger</p>
           </div>
 
 
-          <div class="card-col" data-bs-dismiss="modal" data-bs-toggle="modal">
+          <div class="card-col" data-bs-dismiss="#staticBackdrop" data-bs-toggle="#staticBackdrop">
             <%=link_to image_tag("cars-icon/Bus_normal.png", alt: "", class: "shadow-sm"), carmodel_popup_two_path,  {:remote => true} %>
             <p class="fw-bold text-uppercase">busse</p>
           </div>
 
 
-          <div class="card-col" data-bs-dismiss="modal" data-bs-toggle="modal">
+          <div class="card-col" data-bs-dismiss="#staticBackdrop" data-bs-toggle="#staticBackdrop">
             <%=link_to image_tag("cars-icon/AgriculturalVehicl.png", alt: "", class: "shadow-sm"), carmodel_popup_two_path,  {:remote => true} %>
             <p class="fw-bold text-uppercase">agrar</p>
           </div>
 
 
-          <div class="card-col" data-bs-dismiss="modal" data-bs-toggle="modal">
+          <div class="card-col" data-bs-dismiss="#staticBackdrop" data-bs-toggle="#staticBackdrop">
             <%=link_to image_tag("cars-icon/ConstructionMachine.png", alt: "", class: "shadow-sm"), carmodel_popup_two_path,  {:remote => true} %>
             <p class="fw-bold text-uppercase">bauma</p>
           </div>
 
 
-          <div class="card-col" data-bs-dismiss="modal" data-bs-toggle="modal">
+          <div class="card-col" data-bs-dismiss="#staticBackdrop" data-bs-toggle="#staticBackdrop">
             <%=link_to image_tag("cars-icon/ForkliftTruck.png", alt: "", class: "shadow-sm"), carmodel_popup_two_path,  {:remote => true} %>
             <p class="fw-bold text-uppercase">stapler</p>
           </div>
         </div>
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal"><i class="fa fa-times-circle-o"
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="#staticBackdrop"><i class="fa fa-times-circle-o"
                                                                                    aria-hidden="true"></i>
           Abbrechen</button>
       </div>
